src/styles/snippets.scss
@import 'variables';

/*=============================================
 = Snippet card coloring
 =============================================*/
$snippetWhite: rgb(250, 250, 250);
$snippetRed: rgb(255, 138, 128);
$snippetGreen: rgb(204, 255, 144);
$snippetBlue: rgb(128, 216, 255);
$snippetYellow: rgb(255, 255, 141);
$snippetOrange: rgb(255, 209, 128);
$snippetTeal: rgb(167, 255, 235);
$snippetGray: rgb(207, 216, 220);

@mixin coloredSnippetCard($color) {
  background-color: $color;

  .snippet-card-header, .snippet-card-footer {
    background-color: desaturate(darken($color, 15), 25) !important;
  }
}

.snippet-color-white { @include coloredSnippetCard($snippetWhite); }
.snippet-color-red { @include coloredSnippetCard($snippetRed); }
.snippet-color-green { @include coloredSnippetCard($snippetGreen); }
.snippet-color-blue { @include coloredSnippetCard($snippetBlue); }
.snippet-color-yellow { @include coloredSnippetCard($snippetYellow); }
.snippet-color-orange { @include coloredSnippetCard($snippetOrange); }
.snippet-color-teal { @include coloredSnippetCard($snippetTeal); }
.snippet-color-gray { @include coloredSnippetCard($snippetGray); }

/*=============================================
 = Basic Snippet card styles
 =============================================*/
.snippet-card {
  margin-bottom: 12px;
  word-wrap: break-word;

  .snippet-card-body {
    padding: 10px 16px;
  }

  .snippet-card-header {
    border-bottom: 0;
    font-size: 110%;
    font-weight: bold;
    padding: 10px 15px;
  }

  .snippet-card-body, .snippet-card-header {
    a {
      text-decoration: none;
      color: $basicTextColor;
    }

    a:hover {
      text-decoration: underline;
    }
  }

  .snippet-card-footer {
    border-top: 0;
    padding: 8px 4px;
  }
}

// color the background of the 'loading' icon on the snippets page
// to match the page's background color
.snippets-list-working-spinner {
  .el-loading-mask {
    background-color: $bgColor;
  }
}

// card for "Add a Snippet..." link
.el-card.new-snippet-link-card {
  background-color: $snippetWhite;
  max-width: $cardMaxWidth;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 12px;
  color: #777;
  cursor: pointer;
}

/*=============================================
 = Snippet control styles
 =============================================*/
.snippet-control {
  margin: 0 14px;
  line-height: inherit;
}

.color-picker-item > a {
  display: block;
  min-height: 32px;
  text-decoration: none !important;
}

.dropdown-menu.color-picker-list {
  padding: 0;
  margin: 0;
}

.snippets-hr {
  border-top: 2px dotted #c5c5c5 !important;
  max-width: $cardMaxWidth - 5;
}

